Fix build with pre-KF5 versions of KCalendarCore

BUG: 415499