src/file/filecalendar.cpp
@@ -24,21 +24,21 @@
 
 #include <QDebug>
 
-#include <KCalendarCore/FileStorage>
+#include <KCalCore/FileStorage>
 
 #include "icalformatkio.h"
 #include "ktt_debug.h"
 
 FileCalendar::FileCalendar(QUrl url)
     : m_url(std::move(url))
-    , m_calendar(new KCalendarCore::MemoryCalendar(QTimeZone::systemTimeZone()))
+    , m_calendar(new KCalCore::MemoryCalendar(QTimeZone::systemTimeZone()))
 {
 }
 
 bool FileCalendar::reload()
 {
     m_calendar->close(); // delete all TODOs
-    KCalendarCore::FileStorage fileStorage(m_calendar, m_url.url(), new ICalFormatKIO());
+    KCalCore::FileStorage fileStorage(m_calendar, m_url.url(), new ICalFormatKIO());
     const bool result = fileStorage.load();
     if (!result) {
         qCritical() << "FileCalendar::reload: problem loading calendar";
@@ -48,7 +48,7 @@ bool FileCalendar::reload()
 
 bool FileCalendar::save()
 {
-    KCalendarCore::FileStorage fileStorage(m_calendar, m_url.url(), new ICalFormatKIO());
+    KCalCore::FileStorage fileStorage(m_calendar, m_url.url(), new ICalFormatKIO());
     const bool result = fileStorage.save();
     if (!result) {
         qCritical() << "FileCalendar::save: problem saving calendar";
@@ -56,26 +56,26 @@ bool FileCalendar::save()
     return result;
 }
 
-KCalendarCore::Event::List FileCalendar::rawEvents() const
+KCalCore::Event::List FileCalendar::rawEvents() const
 {
     return m_calendar->rawEvents();
 }
 
-KCalendarCore::Event::List FileCalendar::rawEventsForDate(const QDate &date) const
+KCalCore::Event::List FileCalendar::rawEventsForDate(const QDate &date) const
 {
     return m_calendar->rawEventsForDate(date);
 }
 
-void FileCalendar::addTodo(const KCalendarCore::Todo::Ptr &todo)
+void FileCalendar::addTodo(const KCalCore::Todo::Ptr &todo)
 {
     m_calendar->addTodo(todo);
 }
 
-void FileCalendar::addEvent(const KCalendarCore::Event::Ptr &event)
+void FileCalendar::addEvent(const KCalCore::Event::Ptr &event)
 {
     m_calendar->addEvent(event);
 }
 
-KCalendarCore::Todo::List FileCalendar::rawTodos() const {
+KCalCore::Todo::List FileCalendar::rawTodos() const {
     return m_calendar->rawTodos();
 }
