src/ktimetrackerutility.h
@@ -25,7 +25,7 @@
 
 #include <QString>
 
-#include <KCalendarCore/Incidence>
+#include <KCalCore/Incidence>
 
 /**
   Format time for output.  All times output on screen or report output go
@@ -54,6 +54,6 @@ enum KTIMETRACKER_Errors
   KTIMETRACKER_MAX_ERROR_NO = KTIMETRACKER_ERR_INVALID_DURATION
 };
 
-QString getCustomProperty(const KCalendarCore::Incidence::Ptr &incident, const QString &name);
+QString getCustomProperty(const KCalCore::Incidence::Ptr &incident, const QString &name);
 
 #endif
